--- a/social_media.html
+++ b/social_media.html
@@ -13,6 +13,7 @@
         <div class="social">
             <h2>Social Media Dashboard</h2>
             <p>Total Followers: 23,004</p>
+            <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
         </div>
         <div class="facebook">
             <div class="icon">
